k8s/product-service/product-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
      - name: product-service
        image: micro_service_product_service
        imagePullPolicy: Never  # Prevent pulling from a registry
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product-service
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
